src/objects/Google_Drive_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Google Drive Configuration</description>
    <fields>
        <fullName>Api_Key__c</fullName>
        <label>Api Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scopes__c</fullName>
        <label>Scopes</label>
        <type>Url</type>
    </fields>
    <label>Google Drive Configuration</label>
</CustomObject>